parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> in_instrucciones
Rule 2     in_instrucciones -> instruccion instrucciones
Rule 3     instrucciones -> instruccion instrucciones
Rule 4     instrucciones -> <empty>
Rule 5     empty -> <empty>
Rule 6     instruccion -> error
Rule 7     instruccion -> asignacion_heredada
Rule 8     instruccion -> print_instr
Rule 9     instruccion -> goto_instr
Rule 10    instruccion -> unset_instr
Rule 11    instruccion -> exit_instr
Rule 12    instruccion -> def_etiqueta_instr
Rule 13    instruccion -> if_instr
Rule 14    def_etiqueta_instr -> ID DOSPTS
Rule 15    asignacion_heredada -> tipo_variable lista_asignaciones
Rule 16    lista_asignaciones -> IGUAL asignacion_valor
Rule 17    lista_asignaciones -> asignacion_arr_st
Rule 18    asignacion_valor -> expresion PTCOMA
Rule 19    asignacion_valor -> ARRAY PARIZQ PARDER PTCOMA
Rule 20    asignacion_arr_st -> def_par lista_parametros IGUAL expresion PTCOMA
Rule 21    asignacion_arr_st -> def_par lista_parametros error PTCOMA
Rule 22    lista_parametros -> def_par lista_parametros
Rule 23    lista_parametros -> <empty>
Rule 24    def_par -> CORIZQ expresion CORDER
Rule 25    tipo_variable -> TEMPVAR
Rule 26    tipo_variable -> PARAM
Rule 27    tipo_variable -> FUNVAL
Rule 28    tipo_variable -> RA
Rule 29    tipo_variable -> STACK
Rule 30    tipo_variable -> SP
Rule 31    print_instr -> PRINT PARIZQ valor PARDER PTCOMA
Rule 32    goto_instr -> GOTO ID PTCOMA
Rule 33    unset_instr -> UNSET PARIZQ tipo_variable PARDER PTCOMA
Rule 34    exit_instr -> EXIT PTCOMA
Rule 35    expresion -> valor expresiones
Rule 36    expresion -> expresion_unaria
Rule 37    expresiones -> MAS valor
Rule 38    expresiones -> MENOS valor
Rule 39    expresiones -> MULTI valor
Rule 40    expresiones -> DIVISION valor
Rule 41    expresiones -> RESIDUO valor
Rule 42    expresiones -> IGUALQUE valor
Rule 43    expresiones -> DISTINTO valor
Rule 44    expresiones -> MAYORIG valor
Rule 45    expresiones -> MENORIG valor
Rule 46    expresiones -> MAYORQUE valor
Rule 47    expresiones -> MENORQUE valor
Rule 48    expresiones -> AND valor
Rule 49    expresiones -> OR valor
Rule 50    expresiones -> XOR valor
Rule 51    expresiones -> ANDBB valor
Rule 52    expresiones -> ORBB valor
Rule 53    expresiones -> XORBB valor
Rule 54    expresiones -> SHIFTIZQ valor
Rule 55    expresiones -> SHIFTDER valor
Rule 56    expresiones -> empty
Rule 57    expresion_unaria -> MENOS valor
Rule 58    expresion_unaria -> NOT valor
Rule 59    expresion_unaria -> NOTBB valor
Rule 60    expresion_unaria -> ANDBB valor
Rule 61    valor -> PARIZQ tipo PARDER valor
Rule 62    tipo -> INT
Rule 63    tipo -> FLOAT
Rule 64    tipo -> CHAR
Rule 65    valor -> ENTERO
Rule 66    valor -> DECIMAL
Rule 67    valor -> CADENA
Rule 68    valor -> CADENADOBLE
Rule 69    valor -> tipo_variable paramsaccess
Rule 70    paramsaccess -> empty
Rule 71    paramsaccess -> def_par lista_parametros
Rule 72    valor -> READ PARIZQ PARDER
Rule 73    valor -> ABS PARIZQ expresion PARDER
Rule 74    if_instr -> IF PARIZQ expresion PARDER goto_instr

Terminals, with rules where they appear

ABS                  : 73
AND                  : 48
ANDBB                : 51 60
ARRAY                : 19
CADENA               : 67
CADENADOBLE          : 68
CHAR                 : 64
CORDER               : 24
CORIZQ               : 24
DECIMAL              : 66
DISTINTO             : 43
DIVISION             : 40
DOSPTS               : 14
ENTERO               : 65
EXIT                 : 34
FLOAT                : 63
FUNVAL               : 27
GOTO                 : 32
ID                   : 14 32
IF                   : 74
IGUAL                : 16 20
IGUALQUE             : 42
INT                  : 62
MAS                  : 37
MAYORIG              : 44
MAYORQUE             : 46
MENORIG              : 45
MENORQUE             : 47
MENOS                : 38 57
MULTI                : 39
NOT                  : 58
NOTBB                : 59
OR                   : 49
ORBB                 : 52
PARAM                : 26
PARDER               : 19 31 33 61 72 73 74
PARIZQ               : 19 31 33 61 72 73 74
PRINT                : 31
PTCOMA               : 18 19 20 21 31 32 33 34
RA                   : 28
READ                 : 72
RESIDUO              : 41
SHIFTDER             : 55
SHIFTIZQ             : 54
SP                   : 30
STACK                : 29
TEMPVAR              : 25
UNSET                : 33
XOR                  : 50
XORBB                : 53
error                : 6 21

Nonterminals, with rules where they appear

asignacion_arr_st    : 17
asignacion_heredada  : 7
asignacion_valor     : 16
def_etiqueta_instr   : 12
def_par              : 20 21 22 71
empty                : 56 70
exit_instr           : 11
expresion            : 18 20 24 73 74
expresion_unaria     : 36
expresiones          : 35
goto_instr           : 9 74
if_instr             : 13
in_instrucciones     : 1
init                 : 0
instruccion          : 2 3
instrucciones        : 2 3
lista_asignaciones   : 15
lista_parametros     : 20 21 22 71
paramsaccess         : 69
print_instr          : 8
tipo                 : 61
tipo_variable        : 15 33 69
unset_instr          : 10
valor                : 31 35 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 57 58 59 60 61

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . in_instrucciones
    (2) in_instrucciones -> . instruccion instrucciones
    (6) instruccion -> . error
    (7) instruccion -> . asignacion_heredada
    (8) instruccion -> . print_instr
    (9) instruccion -> . goto_instr
    (10) instruccion -> . unset_instr
    (11) instruccion -> . exit_instr
    (12) instruccion -> . def_etiqueta_instr
    (13) instruccion -> . if_instr
    (15) asignacion_heredada -> . tipo_variable lista_asignaciones
    (31) print_instr -> . PRINT PARIZQ valor PARDER PTCOMA
    (32) goto_instr -> . GOTO ID PTCOMA
    (33) unset_instr -> . UNSET PARIZQ tipo_variable PARDER PTCOMA
    (34) exit_instr -> . EXIT PTCOMA
    (14) def_etiqueta_instr -> . ID DOSPTS
    (74) if_instr -> . IF PARIZQ expresion PARDER goto_instr
    (25) tipo_variable -> . TEMPVAR
    (26) tipo_variable -> . PARAM
    (27) tipo_variable -> . FUNVAL
    (28) tipo_variable -> . RA
    (29) tipo_variable -> . STACK
    (30) tipo_variable -> . SP

    error           shift and go to state 8
    PRINT           shift and go to state 7
    GOTO            shift and go to state 16
    UNSET           shift and go to state 15
    EXIT            shift and go to state 14
    ID              shift and go to state 5
    IF              shift and go to state 11
    TEMPVAR         shift and go to state 12
    PARAM           shift and go to state 6
    FUNVAL          shift and go to state 1
    RA              shift and go to state 3
    STACK           shift and go to state 21
    SP              shift and go to state 2

    exit_instr                     shift and go to state 13
    goto_instr                     shift and go to state 17
    def_etiqueta_instr             shift and go to state 18
    asignacion_heredada            shift and go to state 4
    in_instrucciones               shift and go to state 19
    print_instr                    shift and go to state 9
    init                           shift and go to state 10
    instruccion                    shift and go to state 20
    tipo_variable                  shift and go to state 22
    if_instr                       shift and go to state 23
    unset_instr                    shift and go to state 24

state 1

    (27) tipo_variable -> FUNVAL .

    CORIZQ          reduce using rule 27 (tipo_variable -> FUNVAL .)
    PARDER          reduce using rule 27 (tipo_variable -> FUNVAL .)
    PTCOMA          reduce using rule 27 (tipo_variable -> FUNVAL .)
    CORDER          reduce using rule 27 (tipo_variable -> FUNVAL .)
    IGUAL           reduce using rule 27 (tipo_variable -> FUNVAL .)
    MAS             reduce using rule 27 (tipo_variable -> FUNVAL .)
    MENOS           reduce using rule 27 (tipo_variable -> FUNVAL .)
    MULTI           reduce using rule 27 (tipo_variable -> FUNVAL .)
    DIVISION        reduce using rule 27 (tipo_variable -> FUNVAL .)
    RESIDUO         reduce using rule 27 (tipo_variable -> FUNVAL .)
    IGUALQUE        reduce using rule 27 (tipo_variable -> FUNVAL .)
    DISTINTO        reduce using rule 27 (tipo_variable -> FUNVAL .)
    MAYORIG         reduce using rule 27 (tipo_variable -> FUNVAL .)
    MENORIG         reduce using rule 27 (tipo_variable -> FUNVAL .)
    MAYORQUE        reduce using rule 27 (tipo_variable -> FUNVAL .)
    MENORQUE        reduce using rule 27 (tipo_variable -> FUNVAL .)
    AND             reduce using rule 27 (tipo_variable -> FUNVAL .)
    OR              reduce using rule 27 (tipo_variable -> FUNVAL .)
    XOR             reduce using rule 27 (tipo_variable -> FUNVAL .)
    ANDBB           reduce using rule 27 (tipo_variable -> FUNVAL .)
    ORBB            reduce using rule 27 (tipo_variable -> FUNVAL .)
    XORBB           reduce using rule 27 (tipo_variable -> FUNVAL .)
    SHIFTIZQ        reduce using rule 27 (tipo_variable -> FUNVAL .)
    SHIFTDER        reduce using rule 27 (tipo_variable -> FUNVAL .)


state 2

    (30) tipo_variable -> SP .

    CORIZQ          reduce using rule 30 (tipo_variable -> SP .)
    PARDER          reduce using rule 30 (tipo_variable -> SP .)
    PTCOMA          reduce using rule 30 (tipo_variable -> SP .)
    CORDER          reduce using rule 30 (tipo_variable -> SP .)
    IGUAL           reduce using rule 30 (tipo_variable -> SP .)
    MAS             reduce using rule 30 (tipo_variable -> SP .)
    MENOS           reduce using rule 30 (tipo_variable -> SP .)
    MULTI           reduce using rule 30 (tipo_variable -> SP .)
    DIVISION        reduce using rule 30 (tipo_variable -> SP .)
    RESIDUO         reduce using rule 30 (tipo_variable -> SP .)
    IGUALQUE        reduce using rule 30 (tipo_variable -> SP .)
    DISTINTO        reduce using rule 30 (tipo_variable -> SP .)
    MAYORIG         reduce using rule 30 (tipo_variable -> SP .)
    MENORIG         reduce using rule 30 (tipo_variable -> SP .)
    MAYORQUE        reduce using rule 30 (tipo_variable -> SP .)
    MENORQUE        reduce using rule 30 (tipo_variable -> SP .)
    AND             reduce using rule 30 (tipo_variable -> SP .)
    OR              reduce using rule 30 (tipo_variable -> SP .)
    XOR             reduce using rule 30 (tipo_variable -> SP .)
    ANDBB           reduce using rule 30 (tipo_variable -> SP .)
    ORBB            reduce using rule 30 (tipo_variable -> SP .)
    XORBB           reduce using rule 30 (tipo_variable -> SP .)
    SHIFTIZQ        reduce using rule 30 (tipo_variable -> SP .)
    SHIFTDER        reduce using rule 30 (tipo_variable -> SP .)


state 3

    (28) tipo_variable -> RA .

    CORIZQ          reduce using rule 28 (tipo_variable -> RA .)
    PARDER          reduce using rule 28 (tipo_variable -> RA .)
    PTCOMA          reduce using rule 28 (tipo_variable -> RA .)
    CORDER          reduce using rule 28 (tipo_variable -> RA .)
    IGUAL           reduce using rule 28 (tipo_variable -> RA .)
    MAS             reduce using rule 28 (tipo_variable -> RA .)
    MENOS           reduce using rule 28 (tipo_variable -> RA .)
    MULTI           reduce using rule 28 (tipo_variable -> RA .)
    DIVISION        reduce using rule 28 (tipo_variable -> RA .)
    RESIDUO         reduce using rule 28 (tipo_variable -> RA .)
    IGUALQUE        reduce using rule 28 (tipo_variable -> RA .)
    DISTINTO        reduce using rule 28 (tipo_variable -> RA .)
    MAYORIG         reduce using rule 28 (tipo_variable -> RA .)
    MENORIG         reduce using rule 28 (tipo_variable -> RA .)
    MAYORQUE        reduce using rule 28 (tipo_variable -> RA .)
    MENORQUE        reduce using rule 28 (tipo_variable -> RA .)
    AND             reduce using rule 28 (tipo_variable -> RA .)
    OR              reduce using rule 28 (tipo_variable -> RA .)
    XOR             reduce using rule 28 (tipo_variable -> RA .)
    ANDBB           reduce using rule 28 (tipo_variable -> RA .)
    ORBB            reduce using rule 28 (tipo_variable -> RA .)
    XORBB           reduce using rule 28 (tipo_variable -> RA .)
    SHIFTIZQ        reduce using rule 28 (tipo_variable -> RA .)
    SHIFTDER        reduce using rule 28 (tipo_variable -> RA .)


state 4

    (7) instruccion -> asignacion_heredada .

    error           reduce using rule 7 (instruccion -> asignacion_heredada .)
    PRINT           reduce using rule 7 (instruccion -> asignacion_heredada .)
    GOTO            reduce using rule 7 (instruccion -> asignacion_heredada .)
    UNSET           reduce using rule 7 (instruccion -> asignacion_heredada .)
    EXIT            reduce using rule 7 (instruccion -> asignacion_heredada .)
    ID              reduce using rule 7 (instruccion -> asignacion_heredada .)
    IF              reduce using rule 7 (instruccion -> asignacion_heredada .)
    TEMPVAR         reduce using rule 7 (instruccion -> asignacion_heredada .)
    PARAM           reduce using rule 7 (instruccion -> asignacion_heredada .)
    FUNVAL          reduce using rule 7 (instruccion -> asignacion_heredada .)
    RA              reduce using rule 7 (instruccion -> asignacion_heredada .)
    STACK           reduce using rule 7 (instruccion -> asignacion_heredada .)
    SP              reduce using rule 7 (instruccion -> asignacion_heredada .)
    $end            reduce using rule 7 (instruccion -> asignacion_heredada .)


state 5

    (14) def_etiqueta_instr -> ID . DOSPTS

    DOSPTS          shift and go to state 25


state 6

    (26) tipo_variable -> PARAM .

    CORIZQ          reduce using rule 26 (tipo_variable -> PARAM .)
    PARDER          reduce using rule 26 (tipo_variable -> PARAM .)
    PTCOMA          reduce using rule 26 (tipo_variable -> PARAM .)
    CORDER          reduce using rule 26 (tipo_variable -> PARAM .)
    IGUAL           reduce using rule 26 (tipo_variable -> PARAM .)
    MAS             reduce using rule 26 (tipo_variable -> PARAM .)
    MENOS           reduce using rule 26 (tipo_variable -> PARAM .)
    MULTI           reduce using rule 26 (tipo_variable -> PARAM .)
    DIVISION        reduce using rule 26 (tipo_variable -> PARAM .)
    RESIDUO         reduce using rule 26 (tipo_variable -> PARAM .)
    IGUALQUE        reduce using rule 26 (tipo_variable -> PARAM .)
    DISTINTO        reduce using rule 26 (tipo_variable -> PARAM .)
    MAYORIG         reduce using rule 26 (tipo_variable -> PARAM .)
    MENORIG         reduce using rule 26 (tipo_variable -> PARAM .)
    MAYORQUE        reduce using rule 26 (tipo_variable -> PARAM .)
    MENORQUE        reduce using rule 26 (tipo_variable -> PARAM .)
    AND             reduce using rule 26 (tipo_variable -> PARAM .)
    OR              reduce using rule 26 (tipo_variable -> PARAM .)
    XOR             reduce using rule 26 (tipo_variable -> PARAM .)
    ANDBB           reduce using rule 26 (tipo_variable -> PARAM .)
    ORBB            reduce using rule 26 (tipo_variable -> PARAM .)
    XORBB           reduce using rule 26 (tipo_variable -> PARAM .)
    SHIFTIZQ        reduce using rule 26 (tipo_variable -> PARAM .)
    SHIFTDER        reduce using rule 26 (tipo_variable -> PARAM .)


state 7

    (31) print_instr -> PRINT . PARIZQ valor PARDER PTCOMA

    PARIZQ          shift and go to state 26


state 8

    (6) instruccion -> error .

    error           reduce using rule 6 (instruccion -> error .)
    PRINT           reduce using rule 6 (instruccion -> error .)
    GOTO            reduce using rule 6 (instruccion -> error .)
    UNSET           reduce using rule 6 (instruccion -> error .)
    EXIT            reduce using rule 6 (instruccion -> error .)
    ID              reduce using rule 6 (instruccion -> error .)
    IF              reduce using rule 6 (instruccion -> error .)
    TEMPVAR         reduce using rule 6 (instruccion -> error .)
    PARAM           reduce using rule 6 (instruccion -> error .)
    FUNVAL          reduce using rule 6 (instruccion -> error .)
    RA              reduce using rule 6 (instruccion -> error .)
    STACK           reduce using rule 6 (instruccion -> error .)
    SP              reduce using rule 6 (instruccion -> error .)
    $end            reduce using rule 6 (instruccion -> error .)


state 9

    (8) instruccion -> print_instr .

    error           reduce using rule 8 (instruccion -> print_instr .)
    PRINT           reduce using rule 8 (instruccion -> print_instr .)
    GOTO            reduce using rule 8 (instruccion -> print_instr .)
    UNSET           reduce using rule 8 (instruccion -> print_instr .)
    EXIT            reduce using rule 8 (instruccion -> print_instr .)
    ID              reduce using rule 8 (instruccion -> print_instr .)
    IF              reduce using rule 8 (instruccion -> print_instr .)
    TEMPVAR         reduce using rule 8 (instruccion -> print_instr .)
    PARAM           reduce using rule 8 (instruccion -> print_instr .)
    FUNVAL          reduce using rule 8 (instruccion -> print_instr .)
    RA              reduce using rule 8 (instruccion -> print_instr .)
    STACK           reduce using rule 8 (instruccion -> print_instr .)
    SP              reduce using rule 8 (instruccion -> print_instr .)
    $end            reduce using rule 8 (instruccion -> print_instr .)


state 10

    (0) S' -> init .



state 11

    (74) if_instr -> IF . PARIZQ expresion PARDER goto_instr

    PARIZQ          shift and go to state 27


state 12

    (25) tipo_variable -> TEMPVAR .

    CORIZQ          reduce using rule 25 (tipo_variable -> TEMPVAR .)
    PARDER          reduce using rule 25 (tipo_variable -> TEMPVAR .)
    PTCOMA          reduce using rule 25 (tipo_variable -> TEMPVAR .)
    CORDER          reduce using rule 25 (tipo_variable -> TEMPVAR .)
    IGUAL           reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MAS             reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MENOS           reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MULTI           reduce using rule 25 (tipo_variable -> TEMPVAR .)
    DIVISION        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    RESIDUO         reduce using rule 25 (tipo_variable -> TEMPVAR .)
    IGUALQUE        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    DISTINTO        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MAYORIG         reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MENORIG         reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MAYORQUE        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    MENORQUE        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    AND             reduce using rule 25 (tipo_variable -> TEMPVAR .)
    OR              reduce using rule 25 (tipo_variable -> TEMPVAR .)
    XOR             reduce using rule 25 (tipo_variable -> TEMPVAR .)
    ANDBB           reduce using rule 25 (tipo_variable -> TEMPVAR .)
    ORBB            reduce using rule 25 (tipo_variable -> TEMPVAR .)
    XORBB           reduce using rule 25 (tipo_variable -> TEMPVAR .)
    SHIFTIZQ        reduce using rule 25 (tipo_variable -> TEMPVAR .)
    SHIFTDER        reduce using rule 25 (tipo_variable -> TEMPVAR .)


state 13

    (11) instruccion -> exit_instr .

    error           reduce using rule 11 (instruccion -> exit_instr .)
    PRINT           reduce using rule 11 (instruccion -> exit_instr .)
    GOTO            reduce using rule 11 (instruccion -> exit_instr .)
    UNSET           reduce using rule 11 (instruccion -> exit_instr .)
    EXIT            reduce using rule 11 (instruccion -> exit_instr .)
    ID              reduce using rule 11 (instruccion -> exit_instr .)
    IF              reduce using rule 11 (instruccion -> exit_instr .)
    TEMPVAR         reduce using rule 11 (instruccion -> exit_instr .)
    PARAM           reduce using rule 11 (instruccion -> exit_instr .)
    FUNVAL          reduce using rule 11 (instruccion -> exit_instr .)
    RA              reduce using rule 11 (instruccion -> exit_instr .)
    STACK           reduce using rule 11 (instruccion -> exit_instr .)
    SP              reduce using rule 11 (instruccion -> exit_instr .)
    $end            reduce using rule 11 (instruccion -> exit_instr .)


state 14

    (34) exit_instr -> EXIT . PTCOMA

    PTCOMA          shift and go to state 28


state 15

    (33) unset_instr -> UNSET . PARIZQ tipo_variable PARDER PTCOMA

    PARIZQ          shift and go to state 29


state 16

    (32) goto_instr -> GOTO . ID PTCOMA

    ID              shift and go to state 30


state 17

    (9) instruccion -> goto_instr .

    error           reduce using rule 9 (instruccion -> goto_instr .)
    PRINT           reduce using rule 9 (instruccion -> goto_instr .)
    GOTO            reduce using rule 9 (instruccion -> goto_instr .)
    UNSET           reduce using rule 9 (instruccion -> goto_instr .)
    EXIT            reduce using rule 9 (instruccion -> goto_instr .)
    ID              reduce using rule 9 (instruccion -> goto_instr .)
    IF              reduce using rule 9 (instruccion -> goto_instr .)
    TEMPVAR         reduce using rule 9 (instruccion -> goto_instr .)
    PARAM           reduce using rule 9 (instruccion -> goto_instr .)
    FUNVAL          reduce using rule 9 (instruccion -> goto_instr .)
    RA              reduce using rule 9 (instruccion -> goto_instr .)
    STACK           reduce using rule 9 (instruccion -> goto_instr .)
    SP              reduce using rule 9 (instruccion -> goto_instr .)
    $end            reduce using rule 9 (instruccion -> goto_instr .)


state 18

    (12) instruccion -> def_etiqueta_instr .

    error           reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    PRINT           reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    GOTO            reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    UNSET           reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    EXIT            reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    ID              reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    IF              reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    TEMPVAR         reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    PARAM           reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    FUNVAL          reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    RA              reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    STACK           reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    SP              reduce using rule 12 (instruccion -> def_etiqueta_instr .)
    $end            reduce using rule 12 (instruccion -> def_etiqueta_instr .)


state 19

    (1) init -> in_instrucciones .

    $end            reduce using rule 1 (init -> in_instrucciones .)


state 20

    (2) in_instrucciones -> instruccion . instrucciones
    (3) instrucciones -> . instruccion instrucciones
    (4) instrucciones -> .
    (6) instruccion -> . error
    (7) instruccion -> . asignacion_heredada
    (8) instruccion -> . print_instr
    (9) instruccion -> . goto_instr
    (10) instruccion -> . unset_instr
    (11) instruccion -> . exit_instr
    (12) instruccion -> . def_etiqueta_instr
    (13) instruccion -> . if_instr
    (15) asignacion_heredada -> . tipo_variable lista_asignaciones
    (31) print_instr -> . PRINT PARIZQ valor PARDER PTCOMA
    (32) goto_instr -> . GOTO ID PTCOMA
    (33) unset_instr -> . UNSET PARIZQ tipo_variable PARDER PTCOMA
    (34) exit_instr -> . EXIT PTCOMA
    (14) def_etiqueta_instr -> . ID DOSPTS
    (74) if_instr -> . IF PARIZQ expresion PARDER goto_instr
    (25) tipo_variable -> . TEMPVAR
    (26) tipo_variable -> . PARAM
    (27) tipo_variable -> . FUNVAL
    (28) tipo_variable -> . RA
    (29) tipo_variable -> . STACK
    (30) tipo_variable -> . SP

    $end            reduce using rule 4 (instrucciones -> .)
    error           shift and go to state 8
    PRINT           shift and go to state 7
    GOTO            shift and go to state 16
    UNSET           shift and go to state 15
    EXIT            shift and go to state 14
    ID              shift and go to state 5
    IF              shift and go to state 11
    TEMPVAR         shift and go to state 12
    PARAM           shift and go to state 6
    FUNVAL          shift and go to state 1
    RA              shift and go to state 3
    STACK           shift and go to state 21
    SP              shift and go to state 2

    instrucciones                  shift and go to state 31
    exit_instr                     shift and go to state 13
    goto_instr                     shift and go to state 17
    def_etiqueta_instr             shift and go to state 18
    asignacion_heredada            shift and go to state 4
    print_instr                    shift and go to state 9
    instruccion                    shift and go to state 32
    tipo_variable                  shift and go to state 22
    if_instr                       shift and go to state 23
    unset_instr                    shift and go to state 24

state 21

    (29) tipo_variable -> STACK .

    CORIZQ          reduce using rule 29 (tipo_variable -> STACK .)
    PARDER          reduce using rule 29 (tipo_variable -> STACK .)
    PTCOMA          reduce using rule 29 (tipo_variable -> STACK .)
    CORDER          reduce using rule 29 (tipo_variable -> STACK .)
    IGUAL           reduce using rule 29 (tipo_variable -> STACK .)
    MAS             reduce using rule 29 (tipo_variable -> STACK .)
    MENOS           reduce using rule 29 (tipo_variable -> STACK .)
    MULTI           reduce using rule 29 (tipo_variable -> STACK .)
    DIVISION        reduce using rule 29 (tipo_variable -> STACK .)
    RESIDUO         reduce using rule 29 (tipo_variable -> STACK .)
    IGUALQUE        reduce using rule 29 (tipo_variable -> STACK .)
    DISTINTO        reduce using rule 29 (tipo_variable -> STACK .)
    MAYORIG         reduce using rule 29 (tipo_variable -> STACK .)
    MENORIG         reduce using rule 29 (tipo_variable -> STACK .)
    MAYORQUE        reduce using rule 29 (tipo_variable -> STACK .)
    MENORQUE        reduce using rule 29 (tipo_variable -> STACK .)
    AND             reduce using rule 29 (tipo_variable -> STACK .)
    OR              reduce using rule 29 (tipo_variable -> STACK .)
    XOR             reduce using rule 29 (tipo_variable -> STACK .)
    ANDBB           reduce using rule 29 (tipo_variable -> STACK .)
    ORBB            reduce using rule 29 (tipo_variable -> STACK .)
    XORBB           reduce using rule 29 (tipo_variable -> STACK .)
    SHIFTIZQ        reduce using rule 29 (tipo_variable -> STACK .)
    SHIFTDER        reduce using rule 29 (tipo_variable -> STACK .)


state 22

    (15) asignacion_heredada -> tipo_variable . lista_asignaciones
    (16) lista_asignaciones -> . IGUAL asignacion_valor
    (17) lista_asignaciones -> . asignacion_arr_st
    (20) asignacion_arr_st -> . def_par lista_parametros IGUAL expresion PTCOMA
    (21) asignacion_arr_st -> . def_par lista_parametros error PTCOMA
    (24) def_par -> . CORIZQ expresion CORDER

    IGUAL           shift and go to state 34
    CORIZQ          shift and go to state 36

    lista_asignaciones             shift and go to state 37
    def_par                        shift and go to state 35
    asignacion_arr_st              shift and go to state 33

state 23

    (13) instruccion -> if_instr .

    error           reduce using rule 13 (instruccion -> if_instr .)
    PRINT           reduce using rule 13 (instruccion -> if_instr .)
    GOTO            reduce using rule 13 (instruccion -> if_instr .)
    UNSET           reduce using rule 13 (instruccion -> if_instr .)
    EXIT            reduce using rule 13 (instruccion -> if_instr .)
    ID              reduce using rule 13 (instruccion -> if_instr .)
    IF              reduce using rule 13 (instruccion -> if_instr .)
    TEMPVAR         reduce using rule 13 (instruccion -> if_instr .)
    PARAM           reduce using rule 13 (instruccion -> if_instr .)
    FUNVAL          reduce using rule 13 (instruccion -> if_instr .)
    RA              reduce using rule 13 (instruccion -> if_instr .)
    STACK           reduce using rule 13 (instruccion -> if_instr .)
    SP              reduce using rule 13 (instruccion -> if_instr .)
    $end            reduce using rule 13 (instruccion -> if_instr .)


state 24

    (10) instruccion -> unset_instr .

    error           reduce using rule 10 (instruccion -> unset_instr .)
    PRINT           reduce using rule 10 (instruccion -> unset_instr .)
    GOTO            reduce using rule 10 (instruccion -> unset_instr .)
    UNSET           reduce using rule 10 (instruccion -> unset_instr .)
    EXIT            reduce using rule 10 (instruccion -> unset_instr .)
    ID              reduce using rule 10 (instruccion -> unset_instr .)
    IF              reduce using rule 10 (instruccion -> unset_instr .)
    TEMPVAR         reduce using rule 10 (instruccion -> unset_instr .)
    PARAM           reduce using rule 10 (instruccion -> unset_instr .)
    FUNVAL          reduce using rule 10 (instruccion -> unset_instr .)
    RA              reduce using rule 10 (instruccion -> unset_instr .)
    STACK           reduce using rule 10 (instruccion -> unset_instr .)
    SP              reduce using rule 10 (instruccion -> unset_instr .)
    $end            reduce using rule 10 (instruccion -> unset_instr .)


state 25

    (14) def_etiqueta_instr -> ID DOSPTS .

    error           reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    PRINT           reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    GOTO            reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    UNSET           reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    EXIT            reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    ID              reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    IF              reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    TEMPVAR         reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    PARAM           reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    FUNVAL          reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    RA              reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    STACK           reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    SP              reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)
    $end            reduce using rule 14 (def_etiqueta_instr -> ID DOSPTS .)


state 26

    (31) print_instr -> PRINT PARIZQ . valor PARDER PTCOMA
    (61) valor -> . PARIZQ tipo PARDER valor
    (65) valor -> . ENTERO
    (66) valor -> . DECIMAL
    (67) valor -> . CADENA
    (68) valor -> . CADENADOBLE
    (69) valor -> . tipo_variable paramsaccess
    (72) valor -> . READ PARIZQ PARDER
    (73) valor -> . ABS PARIZQ expresion PARDER
    (25) tipo_variable -> . TEMPVAR
    (26) tipo_variable -> . PARAM
    (27) tipo_variable -> . FUNVAL
    (28) tipo_variable -> . RA
    (29) tipo_variable -> . STACK
    (30) tipo_variable -> . SP

    PARIZQ          shift and go to state 43
    ENTERO          shift and go to state 41
    DECIMAL         shift and go to state 40
    CADENA          shift and go to state 45
    CADENADOBLE     shift and go to state 39
    READ            shift and go to state 42
    ABS             shift and go to state 38
    TEMPVAR         shift and go to state 12
    PARAM           shift and go to state 6
    FUNVAL          shift and go to state 1
    RA              shift and go to state 3
    STACK           shift and go to state 21
    SP              shift and go to state 2

    tipo_variable                  shift and go to state 44
    valor                          shift and go to state 46

state 27

    (74) if_instr -> IF PARIZQ . expresion PARDER goto_instr
    (35) expresion -> . valor expresiones
    (36) expresion -> . expresion_unaria
    (61) valor -> . PARIZQ tipo PARDER valor
    (65) valor -> . ENTERO
    (66) valor -> . DECIMAL
    (67) valor -> . CADENA
    (68) valor -> . CADENADOBLE
    (69) valor -> . tipo_variable paramsaccess
    (72) valor -> . READ PARIZQ PARDER
    (73) valor -> . ABS PARIZQ expresion PARDER
    (57) expresion_unaria -> . MENOS valor
    (58) expresion_unaria -> . NOT valor
    (59) expresion_unaria -> . NOTBB valor
    (60) expresion_unaria -> . ANDBB valor
    (25) tipo_variable -> . TEMPVAR
    (26) tipo_variable -> . PARAM
    (27) tipo_variable -> . FUNVAL
    (28) tipo_variable -> . RA
    (29) tipo_variable -> . STACK
    (30) tipo_variable -> . SP
